# python-project-template

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: main.py
